Add deletion handler.
